# sphinx-design

./: .gitattributes  .gitignore  .pre-commit-config.yaml  .readthedocs.yml  AGENTS.md  CHANGELOG.md  MANIFEST.in  PR_DESCRIPTION.md  README.md  codecov.yml  git_rebase_theme_branches.sh  package-lock.json  package.json  pyproject.toml  setup.cfg  tox.ini
.github/: dependabot.yml
.github/workflows/: ci.yml  copilot-setup-steps.yml
briefs/: 01-backlog-hygiene.md  02-declarative-config.md  03-button-i18n.md  04-static-assets.md  05-ci-modernization.md  06-trusted-publishing.md  07-spurious-child-warnings.md  08-docs-quick-fixes.md  09-dropdown-card-text-classes.md  10-a11y-focus-and-aria.md  11-tabs-js-improvements.md  12-icon-toctree.md  13-fontawesome-modernize.md  14-card-link-image-options.md  15-button-ref-targets.md  16-card-pure-parse.md  17-accordion.md  18-steps.md  19-aside.md  20-tooltips.md  21-latex-output.md  22-testing-module.md  23-js-testing.md  24-packaging-1-0.md  25-drop-sass.md  26-custom-roles.md  27-design-docs.md  README.md
docs/: accordions.md  additional.md  asides.md  badges_buttons.md  cards.md  conf.py  css.md  css_classes.md  css_variables.md  design_css.md  dropdowns.md  get_started.md  grids.md  index.md  other.md  other.rst  steps.md  tabs.md  test.rst  testing.md
docs/_static/: furo.css  sd-furo.css  sphinx_immaterial.css
docs/snippets/myst/: _article-info.txt  accordion-basic.txt  article-info.txt  aside-basic.txt  aside-options.txt  badge-basic.txt  badge-link.txt  button-link.txt  card-basic.txt  card-carousel.txt  card-head-foot.txt  card-images.txt  card-link.txt  card-title-link.txt  div-basic.txt  dropdown-basic.txt  dropdown-options.txt  grid-basic.txt  grid-card-columns.txt  grid-card.txt  grid-gutter.txt  grid-nested.txt  icon-fontawesome.txt  icon-material-design.txt  icon-octicon.txt  step-basic.txt  tab-basic.txt  tab-code-set.txt  tab-options.txt  tab-sync.txt
docs/snippets/rst/: accordion-basic.txt  article-info.txt  aside-basic.txt  aside-options.txt  badge-basic.txt  badge-link.txt  button-link.txt  card-basic.txt  card-carousel.txt  card-head-foot.txt  card-images.txt  card-link.txt  card-title-link.txt  div-basic.txt  dropdown-basic.txt  dropdown-options.txt  grid-basic.txt  grid-card-columns.txt  grid-card.txt  grid-gutter.txt  grid-nested.txt  icon-fontawesome.txt  icon-material-design.txt  icon-octicon.txt  step-basic.txt  tab-basic.txt  tab-code-set.txt  tab-options.txt  tab-sync.txt
sphinx_design/: __init__.py  _compat.py  accordion.py  article_info.py  aside.py  badges.py  badges_buttons.py  card.py  cards.py  config.py  dropdown.py  extension.py  grid.py  grids.py  icons.py  shared.py  steps.py  tabs.py  testing.py
sphinx_design/compiled/: material-icons_LICENSE  material_outlined.json  material_regular.json  material_round.json  material_sharp.json  material_twotone.json  octicons.json  sd_tabs.js  style.min.css
sphinx_design/static/: design-tabs.js  sphinx-design.min.css
style/: _animations.scss  _badge.scss  _borders.scss  _button.scss  _cards.scss  _colors.scss  _display.scss  _dropdown.scss  _grids.scss  _icons.scss  _overrides.scss  _sizing.scss  _spacing.scss  _tabs.scss  _text.scss  _utils.scss  _variables.scss  accordion.css  animations.css  aside.css  badge.css  borders.css  button.css  cards.css  colors.css  containers.css  design.toml  display.css  dropdown.css  grids.css  icons.css  index.scss  overrides.css  spacing.css  steps.css  tabs.css  text.css
tests/: conftest.py  test_aside.py  test_assets.py  test_badge_tooltips.py  test_basic.py  test_buttons.py  test_card_link.py  test_card_text.py  test_cards.py  test_css.py  test_custom_roles.py  test_fontawesome.py  test_icons.py  test_misc.py  test_opts.py  test_snippets.py  test_steps.py  test_tabs_a11y.py  test_tabs_js.py  test_testing_module.py
tests/test_misc/: test_button_i18n_gettext.pot  test_material_outlined_.txt  test_material_regular_.txt  test_material_round_.txt  test_material_twotone_.txt  test_octicons.txt  test_tab_set_with_invalid_children.xml
tests/test_snippets/: sd_custom_directives.xml  sd_hide_title.xml  snippet_i18n_button-link.pot  snippet_post_accordion-basic.xml  snippet_post_article-info.xml  snippet_post_aside-basic.xml  snippet_post_aside-options.xml  snippet_post_badge-basic.xml  snippet_post_button-link.xml  snippet_post_card-basic.xml  snippet_post_card-head-foot.xml  snippet_post_card-images.xml  snippet_post_card-link.xml  snippet_post_card-title-link.xml  snippet_post_dropdown-basic.xml  snippet_post_dropdown-options.xml  snippet_post_grid-basic.xml  snippet_post_grid-card-columns.xml  snippet_post_grid-card.xml  snippet_post_grid-nested.xml  snippet_post_icon-fontawesome.xml  snippet_post_icon-material-design.xml  snippet_post_icon-octicon.xml  snippet_post_step-basic.xml  snippet_post_tab-basic.xml  snippet_post_tab-code-set.xml  snippet_post_tab-options.xml  snippet_post_tab-sync.xml  snippet_pre_accordion-basic.xml  snippet_pre_article-info.xml  snippet_pre_aside-basic.xml  snippet_pre_aside-options.xml  snippet_pre_badge-basic.xml  snippet_pre_badge-link.xml  snippet_pre_button-link.xml  snippet_pre_card-basic.xml  snippet_pre_card-carousel.xml  snippet_pre_card-head-foot.xml  snippet_pre_card-images.xml  snippet_pre_card-link.xml  (+17 more)
tests/test_steps/: steps_nested_myst.xml  steps_nested_rst.xml  steps_start.xml  steps_titled.xml  steps_untitled.xml
tools/: check_css_equivalence.py  generate_css.py
