[build-system]
requires = ["flit_core >=3.4,<4"]
build-backend = "flit_core.buildapi"

[tool.flit.module]
name = "sphinx_design"

[project]
name = "sphinx-design2"
dynamic = ["version"]
description = "A sphinx extension for designing beautiful, view size responsive web components."
authors = [{name = "Chris Sewell", email = "chrisj_sewell@hotmail.com"}]
readme = "README.md"
license = {file = "LICENSE"}
classifiers = [
    "Development Status :: 4 - Beta",
    "Framework :: Sphinx :: Extension",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: Implementation :: CPython",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Text Processing :: Markup",
    "Topic :: Text Processing :: Markup :: Markdown",
    "Topic :: Text Processing :: Markup :: reStructuredText",
]
keywords = ["sphinx", "extension", "material design", "web components"]
requires-python = ">=3.7"
dependencies = ["sphinx>=5,<7"]

[project.urls]
Homepage = "https://github.com/chrisj_sewell/sphinx-design2"
Documentation = "https://sphinx-design2.readthedocs.io"

[project.optional-dependencies]
rtd = ["myst-parser @ git+https://github.com/executablebooks/MyST-Parser"]
testing = [
    "myst-parser @ git+https://github.com/executablebooks/MyST-Parser",
    "pytest~=7.1",
    "pytest-cov",
    "pytest-regressions",
]
theme_furo = ["furo>=2022.06.04"]
theme_pydata = ["pydata-sphinx-theme"]
theme_rtd = ["sphinx-rtd-theme"]
theme_sbt = ["sphinx-book-theme"]

[tool.flit.sdist]
exclude = [
    "docs/",
    "style/",
    "tests/",
]

[tool.mypy]
show_error_codes = true
warn_unused_ignores = true
warn_redundant_casts = true
no_implicit_optional = true
strict_equality = true

[[tool.mypy.overrides]]
module = ["docutils.*"]
ignore_missing_imports = true

[tool.isort]
profile = "black"
src_paths = ["sphinx_design", "tests"]
force_sort_within_sections = true
