[metadata]
name = sphinx_design
version = attr: sphinx_design.__version__
description = A sphinx extension for designing beautiful, size responsive web components.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/executablebooks/sphinx-design
author = Chris Sewell
author_email = chrisj_sewell@hotmail.com
license = MIT
license_file = LICENSE
classifiers =
    Development Status :: 3 - Alpha
    Framework :: Sphinx :: Extension
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: Implementation :: CPython
    Topic :: Software Development :: Libraries :: Python Modules
    Topic :: Text Processing :: Markup
keywords = sphinx extension material design web components

[options]
packages = find:
install_requires =
    sphinx>=3,<5
    importlib-resources~=3.0.0;python_version < "3.7"
python_requires = ~=3.6
include_package_data = True

[options.extras_require]
code_style =
    pre-commit~=2.12
rtd =
    myst-parser~=0.15.0
testing =
    pytest~=5.4
    pytest-cov
    pytest-regressions

[options.packages.find]
exclude =
    test*

[mypy]
show_error_codes = True
warn_unused_ignores = True
warn_redundant_casts = True
no_implicit_optional = True
strict_equality = True

[flake8]
max-line-length = 100
extend-ignore = E203
