[metadata]
name = sphinx_design
version = attr: sphinx_design.__version__
description = A sphinx extension for designing beautiful, view size responsive web components.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/executablebooks/sphinx-design
author = Chris Sewell
author_email = chrisj_sewell@hotmail.com
license = MIT
license_file = LICENSE
classifiers =
    Development Status :: 4 - Beta
    Framework :: Sphinx :: Extension
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: Implementation :: CPython
    Topic :: Software Development :: Libraries :: Python Modules
    Topic :: Text Processing :: Markup
    Topic :: Text Processing :: Markup :: Markdown
    Topic :: Text Processing :: Markup :: reStructuredText
keywords = sphinx extension material design web components
project_urls =
    Documentation = https://sphinx-design.readthedocs.io

[options]
packages = find:
install_requires =
    sphinx>=3,<5
    importlib-resources~=3.0.0;python_version < "3.7"
python_requires = ~=3.6
include_package_data = True

[options.packages.find]
exclude =
    test*

[options.extras_require]
code_style =
    pre-commit~=2.12
rtd =
    myst-parser~=0.15.0
testing =
    myst-parser~=0.15.0
    pytest~=6.2
    pytest-cov
    pytest-regressions
theme_furo =
    furo==2021.7.5b38
theme_pydata =
    pydata-sphinx-theme~=0.6.0
theme_rtd =
    sphinx-rtd-theme~=0.5.0
theme_sbt =
    sphinx-book-theme~=0.1.0

[mypy]
show_error_codes = True
warn_unused_ignores = True
warn_redundant_casts = True
no_implicit_optional = True
strict_equality = True

[flake8]
max-line-length = 100
extend-ignore = E203
